Added loading spinner for add player.  Fixed CSS issue for teams.

--- a/src/components/CheatSheet/CheatSheet.css
+++ b/src/components/CheatSheet/CheatSheet.css
@@ -117,7 +117,7 @@
     border-bottom: 5px solid #C60C30;
 }
 /* New Orleans Saints */
-.MP {
+.NO {
     background: #D3BC8D;
     border-bottom: 5px solid #101820;
 }
