--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,7 @@
 @import '~bootstrap/scss/bootstrap';
+
+body {
+    background-image: url('https://wfmj.images.worldnow.com/images/15161742_G.jpg?lastEditedDate=1511797813000');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
