--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,15 @@
 @import '~bootstrap/scss/bootstrap';
 
 body {
-    background-image: url('https://wfmj.images.worldnow.com/images/15161742_G.jpg?lastEditedDate=1511797813000');
+    background-image: url('https://i.imgur.com/BzXfuc6.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    min-height: 100vh;
+}
+.ga-form {
+    background-color: white;
+    padding: 1.2rem;
+    margin-top: 2rem;
+    border-radius: 5px;
+    box-shadow: 10px 10px 8px;
 }
