--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/bootstrap";
 
 body {
-    background-image: url('https://i.imgur.com/BzXfuc6.jpg');
+    background-image: url("https://i.imgur.com/BzXfuc6.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 100vh;
